<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>it.mulders.traqqr</groupId>
  <artifactId>traqqr</artifactId>
  <version>0.1-SNAPSHOT</version>

  <packaging>pom</packaging>

  <modules>
    <module>app</module>
    <module>runtime</module>
    <module>tests</module>
    <module>docs</module>
  </modules>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>21</maven.compiler.release>

    <jakarta-ee.version>10.0.0</jakarta-ee.version>
    <junit.jupiter.version>5.13.4</junit.jupiter.version>
    <mapstruct.version>1.6.3</mapstruct.version>
    <postgresql.jdbc.version>42.7.7</postgresql.jdbc.version>
    <primefaces.version>15.0.7</primefaces.version>

    <!-- spotless:off -->
    <jacocoArgLine></jacocoArgLine>
    <!-- spotless:on -->
  </properties>

  <dependencyManagement>
    <dependencies>
      <!-- libraries -->
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>2.0.17</version>
      </dependency>
      <dependency>
        <groupId>ch.qos.logback</groupId>
        <artifactId>logback-classic</artifactId>
        <version>1.5.18</version>
      </dependency>
      <dependency>
        <groupId>org.mapstruct</groupId>
        <artifactId>mapstruct</artifactId>
        <version>${mapstruct.version}</version>
        <scope>provided</scope>
      </dependency>

      <!-- platform dependencies -->
      <dependency>
        <groupId>jakarta.platform</groupId>
        <artifactId>jakarta.jakartaee-bom</artifactId>
        <version>${jakarta-ee.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>${junit.jupiter.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.assertj</groupId>
        <artifactId>assertj-core</artifactId>
        <version>3.27.4</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>nl.jqno.equalsverifier</groupId>
        <artifactId>equalsverifier</artifactId>
        <version>4.0.9</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-nop</artifactId>
        <version>2.0.17</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-simple</artifactId>
        <version>2.0.17</version>
        <scope>test</scope>
      </dependency>

      <!-- project dependencies -->
      <dependency>
        <groupId>it.mulders.traqqr</groupId>
        <artifactId>config</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>it.mulders.traqqr</groupId>
        <artifactId>batch</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>it.mulders.traqqr</groupId>
        <artifactId>domain</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>it.mulders.traqqr</groupId>
        <artifactId>api</artifactId>
        <version>${project.version}</version>
        <type>war</type>
      </dependency>
      <dependency>
        <groupId>it.mulders.traqqr</groupId>
        <artifactId>web</artifactId>
        <version>${project.version}</version>
        <type>war</type>
      </dependency>
      <dependency>
        <groupId>it.mulders.traqqr</groupId>
        <artifactId>mem</artifactId>
        <version>${project.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>it.mulders.traqqr</groupId>
        <artifactId>fakes</artifactId>
        <version>${project.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>it.mulders.traqqr</groupId>
        <artifactId>jpa</artifactId>
        <version>${project.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.14.0</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-war-plugin</artifactId>
          <version>3.4.0</version>
          <configuration>
            <failOnMissingWebXml>false</failOnMissingWebXml>
          </configuration>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>3.8.1</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.5.3</version>
          <configuration>
            <argLine>@{jacocoArgLine}</argLine>
          </configuration>
          <dependencies>
            <dependency>
              <groupId>org.junit.jupiter</groupId>
              <artifactId>junit-jupiter-engine</artifactId>
              <version>${junit.jupiter.version}</version>
            </dependency>
          </dependencies>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-failsafe-plugin</artifactId>
          <version>3.5.3</version>
          <configuration>
            <argLine>@{jacocoArgLine}</argLine>
          </configuration>
          <executions>
            <execution>
              <goals>
                <goal>integration-test</goal>
                <goal>verify</goal>
              </goals>
            </execution>
          </executions>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.5.0</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.3.1</version>
          <configuration>
            <propertiesEncoding>ISO-8859-1</propertiesEncoding>
          </configuration>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-install-plugin</artifactId>
          <version>3.1.4</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.4.2</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-ear-plugin</artifactId>
          <version>3.4.0</version>
        </plugin>

        <plugin>
          <groupId>com.diffplug.spotless</groupId>
          <artifactId>spotless-maven-plugin</artifactId>
          <version>2.46.1</version>
          <configuration>
            <java>
              <palantirJavaFormat>
                <version>2.50.0</version>
              </palantirJavaFormat>
              <toggleOffOn></toggleOffOn>
            </java>
            <pom>
              <sortPom>
                <expandEmptyElements>true</expandEmptyElements>
                <spaceBeforeCloseEmptyElement>true</spaceBeforeCloseEmptyElement>
              </sortPom>
              <toggleOffOn></toggleOffOn>
            </pom>
          </configuration>
          <executions>
            <execution>
              <goals>
                <goal>check</goal>
              </goals>
            </execution>
          </executions>
        </plugin>

        <plugin>
          <groupId>org.jacoco</groupId>
          <artifactId>jacoco-maven-plugin</artifactId>
          <version>0.8.13</version>
          <configuration>
            <propertyName>jacocoArgLine</propertyName>
          </configuration>
        </plugin>

        <plugin>
          <groupId>org.sonarsource.scanner.maven</groupId>
          <artifactId>sonar-maven-plugin</artifactId>
          <version>5.2.0.4988</version>
        </plugin>

        <plugin>
          <groupId>io.openliberty.tools</groupId>
          <artifactId>liberty-maven-plugin</artifactId>
          <version>3.11.5</version>
        </plugin>

        <plugin>
          <groupId>org.pitest</groupId>
          <artifactId>pitest-maven</artifactId>
          <version>1.20.2</version>
          <configuration combine.children="append">
            <excludedClasses>
              <excludedClass>it.mulders.traqqr.**.*Entity</excludedClass>
              <excludedClass>it.mulders.traqqr.**.*MapperImpl</excludedClass>
            </excludedClasses>
            <outputFormats>
              <format>${pit.format}</format>
            </outputFormats>
            <pluginConfiguration>
              <stryker.moduleName>${project.artifactId}</stryker.moduleName>
            </pluginConfiguration>
          </configuration>
          <dependencies>
            <dependency>
              <groupId>org.pitest</groupId>
              <artifactId>pitest-junit5-plugin</artifactId>
              <version>1.2.3</version>
            </dependency>
            <dependency>
              <groupId>it.mulders.stryker</groupId>
              <artifactId>pit-dashboard-reporter</artifactId>
              <version>0.3.7</version>
            </dependency>
            <dependency>
              <groupId>io.github.wmaarts</groupId>
              <artifactId>pitest-mutation-testing-elements-plugin</artifactId>
              <version>0.7.0</version>
            </dependency>
          </dependencies>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <profiles>
    <profile>
      <id>sonarcloud</id>
      <properties>
        <sonar.projectKey>mthmulders_traqqr</sonar.projectKey>
        <sonar.organization>mthmulders-github</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <sonar.moduleKey>${project.artifactId}</sonar.moduleKey>

        <sonar.coverage.exclusions>app/adapters/mem/**/*,**/src/test/java/**/*,app/fakes/**/*</sonar.coverage.exclusions>
      </properties>

      <build>
        <plugins>
          <plugin>
            <groupId>org.jacoco</groupId>
            <artifactId>jacoco-maven-plugin</artifactId>
            <executions>
              <execution>
                <id>prepare-agent</id>
                <goals>
                  <goal>prepare-agent</goal>
                </goals>
              </execution>
              <execution>
                <id>prepare-agent-integration</id>
                <goals>
                  <goal>prepare-agent-integration</goal>
                </goals>
              </execution>
              <execution>
                <id>report</id>
                <goals>
                  <goal>report</goal>
                </goals>
              </execution>
              <execution>
                <id>report-integration</id>
                <goals>
                  <goal>report-integration</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
